examples/errors/empty_class.ik
type Foo class:

fn main():
    print("Hello\n")
